# react-wasm-github-api-demo

./: .gitignore  Cargo.toml  LICENSE  README.md  craco.config.js  package.json
backend/: Cargo.toml  schema.json
backend/src/: github.rs  head-query.graphql  lib.rs  web.rs
frontend/: .eslintcache  craco.config.js  index.js  package-lock.json  package.json
frontend/src/: index-cra.tsx  pkg
src/: App.tsx  index-cra.tsx  index.tsx  lib.rs  pkg
